fix: update command name

--- a/website/docs/Getting_Started/Usage.mdx
+++ b/website/docs/Getting_Started/Usage.mdx
@@ -9,7 +9,7 @@ description: Use Flowee to generate a diagram of your CloudFormation template.
 To start Flowee, run the following command:
 
 ```bash
-flowee diagram-generate --cf <path-to-your-cloudformation-template> --path <output-directory>
+flowee generate-diagram --cf <path-to-your-cloudformation-template> --path <output-directory>
 ```
 
 This will generate a json file of your CloudFormation template in the specified output directory.
