fix: update documentation

--- a/website/docs/Getting_Started/Installation.mdx
+++ b/website/docs/Getting_Started/Installation.mdx
@@ -9,6 +9,8 @@ description: How to install the Flowee package on your system.
 - Python version 3 or above (which can be checked by running python --version). If you don't have Python installed, you can download it from
   [here](https://www.python.org/downloads/).
 - pip (which comes with Python)
+- node version 20 or above
+- npm 
 
 ## Installation
 
@@ -19,6 +21,13 @@ pip install flowee
 ```
 
 This will install the package and its dependencies on your system.
+
+Before using this package, you need to install Playwright and the necessary browsers. You can install Playwright and browsers by running:
+
+pip install playwright
+python -m playwright install
+
+For more detailed instructions, please refer to the Playwright documentation: https://playwright.dev/python/docs/intro
 
 ## Updating
 
