chore: add documentation tweaks

--- a/website/docs/Getting_Started/Installation.mdx
+++ b/website/docs/Getting_Started/Installation.mdx
@@ -24,8 +24,10 @@ This will install the package and its dependencies on your system.
 
 Before using this package, you need to install Playwright and the necessary browsers. You can install Playwright and browsers by running:
 
+```bash
 pip install playwright
 python -m playwright install
+```
 
 For more detailed instructions, please refer to the Playwright documentation: https://playwright.dev/python/docs/intro
 
